--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gray-matter": "^4.0.3",
     "html-react-parser": "^5.1.15",
     "lucide-react": "^0.438.0",
-    "next": "14.2.7",
+    "next": "^15.3.3",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
